# price_tracker

./: .gitignore
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  newegg_bypass_research.md
backend/: .env.example  .gitignore  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6e00987c7dbb_initial_schema_six_tables.py
backend/app/api/: alerts.py  scrapes.py  watch_queries.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  alert.py  app_settings.py  base.py  retailer_url.py  scrape_job.py  scrape_result.py  watch_query.py
backend/app/repositories/: alert.py  app_settings.py  scrape_result.py  watch_query.py
backend/app/schemas/: alert.py  app_settings.py  scrape.py  watch_query.py
backend/app/scrapers/: __init__.py  amazon.py  base.py  bestbuy.py  browser.py  microcenter.py  newegg.py  registry.py  walmart.py
backend/app/services/: alert_service.py  scheduler.py  scrape_service.py
backend/scripts/: scrape.py
backend/tests/: conftest.py  test_database.py  test_migrations.py
backend/tests/api/: conftest.py  test_alerts.py  test_alerts_crud.py  test_scrapes.py  test_watch_queries.py
backend/tests/repositories/: test_alert.py  test_scrape_result.py  test_watch_query.py
backend/tests/scrapers/: test_browser_manager.py  test_extractors.py  test_registry.py  test_retry.py  test_scrape_service.py
backend/tests/services/: test_alert_service.py  test_price_delta.py  test_scheduler.py
frontend/: components.json  package-lock.json  package.json
frontend/src/: App.tsx  (+2 more)
(+106 files in other folders)
